--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -23,7 +23,7 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -142,7 +142,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="44dp"
                         android:gravity="center_vertical"
                         android:orientation="vertical">
 
@@ -283,7 +283,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="44dp"
                         android:gravity="center_vertical"
                         android:orientation="vertical">
 
@@ -424,7 +424,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="44dp"
                         android:gravity="center_vertical"
                         android:paddingLeft="12dp"
                         android:paddingRight="10dp">
@@ -480,7 +480,7 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="156dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -491,7 +491,7 @@
                     android:background="@color/color_bbbbbb_ffffff"
                     android:orientation="horizontal"
                     android:visibility="gone"
-                    tools:visibility="visible">
+                    tools:visibility="gone">
 
                     <TextView
                         android:id="@+id/tv_correct_1"
@@ -535,12 +535,12 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_league_odd_btn_pager_main"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:nestedScrollingEnabled="false"
-                    android:orientation="horizontal"
                     android:overScrollMode="never"
-                    tools:itemCount="5"
+                    tools:layout_manager=""
+                    tools:itemCount="1"
                     tools:listitem="@layout/itemview_odd_btn_2x2_v6" />
             </LinearLayout>
 
