--- a/app/src/main/res/layout/content_rv_bank_card_list.xml
+++ b/app/src/main/res/layout/content_rv_bank_card_list.xml
@@ -70,10 +70,10 @@
                     android:id="@+id/bank_card_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/bank_memory_card"
+                    android:text="@string/bank_card"
                     android:textColor="#7Fffffff"
                     android:textSize="@dimen/textSize12sp"
-                    tools:text="储存卡" />
+                    tools:text="@string/bank_card" />
             </LinearLayout>
             <LinearLayout
                android:layout_marginStart="74dp"
