--- a/app/src/main/res/layout/fragment_bank_card.xml
+++ b/app/src/main/res/layout/fragment_bank_card.xml
@@ -65,7 +65,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/dp_4"
             android:orientation="vertical">
 
             <LinearLayout
@@ -392,6 +391,7 @@
                     android:layout_marginStart="@dimen/margin_14"
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="@dimen/margin_14"
+                    app:endIcon="@drawable/ic_eye_close"
                     app:hintText="@string/hint_please_enter_withdraw_password"
                     app:isResponsiveIconColor="false"
                     app:labelText="@string/withdraw_password"
@@ -437,7 +437,8 @@
                     android:textAllCaps="true"
                     android:textColor="@color/color_FFFFFF_FFFFFF"
                     android:textSize="@dimen/textSize16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:alpha="0.5"/>
 
                 <TextView
                     android:id="@+id/btn_delete_bank"
