--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -369,7 +369,8 @@
                         android:textAllCaps="true"
                         android:textColor="@color/color_FFFFFF_FFFFFF"
                         android:textSize="@dimen/textSize16sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:alpha="0.5"/>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
