[Add] 新增證件類別ID

--- a/app/src/main/res/layout/content_verify_identity_kyc.xml
+++ b/app/src/main/res/layout/content_verify_identity_kyc.xml
@@ -34,6 +34,7 @@
 
 
         <ImageView
+            android:id="@+id/ic_recharge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
