--- a/app/src/main/res/layout/fragment_bank_card.xml
+++ b/app/src/main/res/layout/fragment_bank_card.xml
@@ -253,7 +253,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <!-- 協議/幣種 -->
-                   <!-- <LinearLayout
+                  <LinearLayout
                         android:id="@+id/item_usdt_selector"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -309,12 +309,12 @@
                             android:layout_marginTop="@dimen/margin_10"
                             android:background="@color/color_E3E8EE" />
 
-                    </LinearLayout>-->
+                    </LinearLayout>
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-
+                        android:visibility="gone"
                         app:cardBackgroundColor="@color/color_191919_FCFCFC"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="@null"
