--- a/app/src/main/res/layout/item_account_history_next_content_parlay.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay.xml
@@ -18,7 +18,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="SpUsage">
 
         <View
             android:id="@+id/topViewParlay"
@@ -158,10 +159,20 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/bet_info_list_win_quota"
-                                android:textAlignment="viewEnd"
                                 android:textColor="@color/color_9BB3D9_535D76"
-                                android:textSize="@dimen/textSize12sp" />
+                                android:textSize="@dimen/textSize12sp"
+                                app:betDetailStatusColor="@{row.status}"
+                                app:betReceiptStatus="@{row.status}"
+                                app:betResultCancelBy="@{row.cancelledBy}"
+                                tools:text="@string/win" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/colon"
+                                android:textColor="@color/color_9BB3D9_535D76"
+                                android:textSize="@dimen/textSize12sp"
+                                app:hideByStatus="@{row.status}" />
 
                             <TextView
                                 android:id="@+id/tv_win_lose_money"
@@ -171,6 +182,7 @@
                                 android:textColor="@color/color_DB6372"
                                 android:textSize="@dimen/textSize12sp"
                                 android:textStyle="bold"
+                                app:hideByStatus="@{row.status}"
                                 app:moneyColor="@{row.win}"
                                 app:moneyFormat="@{row.win}"
                                 tools:text="9,999,999.000" />
@@ -239,6 +251,13 @@
                             tools:text="08/12 11:31" />
                     </LinearLayout>
                 </LinearLayout>
+
+                <View
+                    android:id="@+id/clickableView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/bottomContainer"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
