--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -441,11 +441,11 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:gravity="right"
                                 android:layout_marginEnd="@dimen/margin_5"
                                 android:layout_toStartOf="@+id/iv_line"
                                 android:layout_toEndOf="@+id/tv_fund_detail"
                                 android:ellipsize="end"
+                                android:gravity="right"
                                 android:singleLine="true"
                                 android:text="@string/transaction_record"
                                 android:textColor="@color/color_A7B2C4"
@@ -640,6 +640,7 @@
                             android:layout_weight="1">
 
                             <TextView
+                                android:id="@+id/tv_help"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
@@ -658,8 +659,9 @@
                                 android:src="@drawable/ic_arrow_right" />
 
                             <LinearLayout
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_toRightOf="@+id/tv_help"
                                 android:gravity="center_vertical"
                                 android:layout_centerVertical="true"
                                 android:layout_alignParentRight="true"
@@ -670,6 +672,8 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_centerVertical="true"
+                                    android:singleLine="true"
+                                    android:ellipsize="end"
                                     android:text="@string/faqs"
                                     android:textColor="@color/color_A7B2C4"
                                     android:textSize="@dimen/textSize12sp" />
@@ -700,6 +704,8 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:singleLine="true"
+                                    android:ellipsize="end"
                                     android:layout_centerVertical="true"
                                     android:text="@string/feedback"
                                     android:textColor="@color/color_A7B2C4"
@@ -853,7 +859,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_marginEnd="@dimen/margin_2"
-                                android:layout_toEndOf="@+id/tv_version"
+                                android:layout_toRightOf="@+id/tv_version"
+                                android:layout_toStartOf="@id/lin_version_new"
                                 android:textColor="@color/color_A5AABF"
                                 android:textSize="@dimen/textSize12sp" />
 
@@ -867,9 +874,11 @@
                                 android:src="@drawable/ic_arrow_right" />
 
                             <LinearLayout
+                                android:id="@+id/lin_version_new"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
+                                android:layout_toRightOf="@+id/tv_version_now"
                                 android:layout_toStartOf="@+id/iv_line3">
 
                                 <TextView
