--- a/app/src/main/res/layout/content_feedback_record_detail_rv_left.xml
+++ b/app/src/main/res/layout/content_feedback_record_detail_rv_left.xml
@@ -14,12 +14,12 @@
         <ImageView
             android:layout_width="@dimen/dp_40"
             android:layout_height="@dimen/dp_40"
-            android:layout_marginEnd="5dp"
             android:layout_marginTop="2dp"
             android:src="@drawable/ic_person_avatar" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ct_message"
+            android:padding="@dimen/dp_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_rectangle_4dp_gray">
@@ -29,9 +29,7 @@
                 android:id="@+id/txv_reply"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="35dp"
+                android:layout_marginStart="10dp"
                 android:background="@null"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize14sp"
@@ -50,7 +48,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:textColor="@color/color_C9CFD7"
         android:textSize="@dimen/textSize10sp"
