--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -49,6 +49,7 @@
          android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
          android:orientation="vertical"
          android:layout_marginTop="@dimen/margin_10"
+         android:paddingBottom="@dimen/margin_3"
          app:layout_constraintTop_toBottomOf="@id/linearLayout"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent">
@@ -126,7 +127,7 @@
                 <com.scwang.smart.refresh.layout.SmartRefreshLayout
                     android:id="@+id/view_refresh"
                     android:layout_width="match_parent"
-                    android:layout_height="386dp"
+                    android:layout_height="360dp"
                     app:srlDragRate="0.3"
                     app:srlEnableLoadMore="true"
                     app:srlEnablePureScrollMode="true">
@@ -137,6 +138,8 @@
                         android:id="@+id/rvlist"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/margin_10"
+                        android:layout_marginRight="@dimen/margin_10"
                         android:overScrollMode="never"
                         tools:itemCount="3"
                         tools:listitem="@layout/view_item_recharge_log" />
@@ -196,5 +199,17 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <TextView
+        android:id="@+id/tv_no_data_history"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="@color/color_191919_FCFCFC"
+        android:gravity="center"
+        android:paddingVertical="12dp"
+        android:text="@string/no_data"
+        android:textColor="@color/color_909090_666666"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="@dimen/textSize12sp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
