--- a/app/src/main/res/layout/fragment_money_transfer_record.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_record.xml
@@ -86,6 +86,7 @@
         android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_10"
+        android:paddingBottom="@dimen/margin_3"
         app:layout_constraintTop_toBottomOf="@id/ll_status"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
