--- a/app/src/main/res/layout/view_item_recharge_log.xml
+++ b/app/src/main/res/layout/view_item_recharge_log.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/margin_15"
     android:background="@color/color_191919_FCFCFC"
     android:gravity="center"
     android:orientation="horizontal"
