修改存款记录及历史记录UI

--- a/app/src/main/res/layout/activity_recharge_log.xml
+++ b/app/src/main/res/layout/activity_recharge_log.xml
@@ -160,6 +160,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvlist"
+                    android:layout_marginHorizontal="@dimen/margin_8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:overScrollMode="never"
