--- a/app/src/main/res/layout/fragment_feedback_record_list.xml
+++ b/app/src/main/res/layout/fragment_feedback_record_list.xml
@@ -139,6 +139,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_no_data"
         android:layout_width="match_parent"
         android:layout_height="56dp"
