--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -662,7 +662,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_toRightOf="@+id/tv_help"
-                                android:gravity="center_vertical"
+                                android:gravity="center_vertical|end"
                                 android:layout_centerVertical="true"
                                 android:layout_alignParentRight="true"
                                 android:layout_marginRight="20dp"
@@ -687,7 +687,6 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1"
                                     android:singleLine="true"
                                     android:ellipsize="end"
                                     android:layout_centerVertical="true"
