--- a/app/src/main/res/drawable/bg_radius_4_button_white_silver_light.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_white_silver_light.xml
@@ -5,5 +5,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/color_DFE8F2" />
-    <solid android:color="@color/color_10DFEBFF" />
+    <solid android:color="@color/color_05025BE8" />
 </shape>
