--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -427,7 +427,7 @@
     <color name="color_F2F5FA">#F2F5FA</color>
     <color name="color_979797">#979797</color>
     <color name="color_DFEBFF">#DFEBFF</color>
-    <color name="color_10DFEBFF">#10DFEBFF</color>
+    <color name="color_05025BE8">#05025BE8</color>
     <color name="color_EBEDF0">#EBEDF0</color>
     <color name="color_181922">#181922</color>
 
