--- a/app/src/main/res/layout/fragment_other_bet_record.xml
+++ b/app/src/main/res/layout/fragment_other_bet_record.xml
@@ -43,6 +43,7 @@
         android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_10"
+        android:layout_marginBottom="60dp"
         app:layout_constraintTop_toBottomOf="@id/tvUsTime"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -51,6 +52,7 @@
             android:id="@+id/rech_log_column"
             android:layout_width="match_parent"
             android:layout_height="36dp"
+            android:paddingBottom="@dimen/margin_3"
             android:layout_marginTop="@dimen/margin_1"
             android:layout_marginLeft="@dimen/margin_1"
             android:layout_marginRight="@dimen/margin_1"
@@ -106,7 +108,7 @@
         <com.scwang.smart.refresh.layout.SmartRefreshLayout
             android:id="@+id/view_refresh"
             android:layout_width="match_parent"
-            android:layout_height="386dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_1"
             android:layout_marginRight="@dimen/margin_1"
             android:layout_marginBottom="@dimen/margin_7"
@@ -123,9 +125,11 @@
                     android:id="@+id/rv_record"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin_8"
                     android:overScrollMode="never"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/view_item_recharge_log" />
+                    tools:listitem="@layout/view_item_recharge_log"
+                    tools:itemCount="2"/>
 
                 <include
                     android:id="@+id/view_no_record"
